# LabNote

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/application/: file_service.py  project_service.py  research_note_service.py
backend/app/core/: config.py  security.py  system_admin_registry.py  system_admins.json
backend/app/domain/: models.py
backend/app/domain/accounts/: entities.py  repositories.py  use_cases.py
backend/app/domain/audit/: entities.py  repositories.py  use_cases.py
backend/app/domain/companies/: entities.py  repositories.py  use_cases.py
backend/app/domain/projects/: use_cases.py
backend/app/domain/research_notes/: document_editor_use_cases.py  use_cases.py
backend/app/infrastructure/db/: bootstrap.py  models.py  session.py
backend/app/infrastructure/pdf/: pdf_splitter.py
backend/app/infrastructure/repositories/: sqlalchemy_identity.py
backend/app/infrastructure/storage/: local_storage.py
backend/app/presentation/dependencies/: auth.py
backend/app/presentation/routers/: admin.py  auth.py  directory.py  document_editor.py  file.py  health.py  project.py  research_note.py
backend/app/presentation/schemas/: admin.py  auth.py  directory.py  document_editor.py  file.py  project.py  research_note.py
backend/scripts/: manage_system_admins.py
backend/storage/: labnote.db
backend/tests/: test_config.py  test_file_upload_api.py  test_health.py  test_research_note_api.py
(+15 files in other folders)
